Upgrade to Spring Boot 4.0.1 / Spring Framework 7.0.2
Major framework upgrade preparing DSpace for Spring Boot 4 before the
June 2026 EOL deadline for Spring Boot 3.x.

Key changes:
- Spring Boot 4.0.1, Spring Framework 7.0.2, Spring Security 7.0.2
- Apache HttpClient 4→5 migration (StatusLine API changes)
- Jackson 2→3 migration (tools.jackson package)
- Hibernate 7.1.13.Final
- JUnit 5.12.0 / JUnit Platform 1.12.0
- Mockito 5.14.2 with mockito-inline support
- MockWebServer 3.x API updates

Migration performed via OpenRewrite UpgradeSpringBoot_4_0 recipe with
manual fixes for:
- Custom Jackson deserializers (MultiFormatDateDeserializer, RawJsonDeserializer)
- HttpClient 5 API changes throughout codebase
- Test StatusLine mocking (response.getCode() instead of StatusLine)
- MockWebServer lifecycle (start()/close() methods)
- JUnit/Mockito version alignment for Spring 7 compatibility

All 15 modules compile successfully. Standalone unit tests pass.
Integration tests require deployed DSpace environment.

Refs: DSpace/DSpace#11621

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>