@@ -234,7 +234,7 @@ public class SolrUpgradePre6xStatistics {
         long hh = sec / 3600;
         long mm = (sec % 3600) / 60;
         long ss = (sec % 60);
-        return String.format("%d:%02d:%02d", hh, mm, ss);
+        return "%d:%02d:%02d".formatted(hh, mm, ss);
     }
 
     /**
@@ -256,11 +256,11 @@ public class SolrUpgradePre6xStatistics {
             log.error("Cannot get cache size", e);
         }
         String label = fromStart ? "TOTAL" : "Processed";
-        System.out.println(String.format("%s (%s; %s; %s)",
-            String.format("\t%,12d %10s...", numProcessed, label),
-            String.format("%,6d sec; %s", dur / 1000, stotalDur),
-            String.format("DB cache: %,6d/%,8d", cacheSize, getCacheCounts(fromStart)),
-            String.format("Docs: %,6d", docs.size())));
+        System.out.println("%s (%s; %s; %s)".formatted(
+            "\t%,12d %10s...".formatted(numProcessed, label),
+            "%,6d sec; %s".formatted(dur / 1000, stotalDur),
+            "DB cache: %,6d/%,8d".formatted(cacheSize, getCacheCounts(fromStart)),
+            "Docs: %,6d".formatted(docs.size())));
     }
 
     /*
@@ -378,7 +378,7 @@ public class SolrUpgradePre6xStatistics {
         System.out.println("\t*** Statistics Records with Legacy Id ***\n");
         long total = runReportQuery();
         System.out.println("\t--------------------------------------");
-        System.out.println(String.format("\t%,12d\t%s", total, "TOTAL"));
+        System.out.println("\t%,12d\t%s".formatted(total, "TOTAL"));
         System.out.println("=================================================================");
         System.out.println();
     }
@@ -418,17 +418,17 @@ public class SolrUpgradePre6xStatistics {
                     unexpected += count.getCount();
                     continue;
                 }
-                System.out.println(String.format("\t%,12d\t%s", count.getCount(), name));
+                System.out.println("\t%,12d\t%s".formatted(count.getCount(), name));
                 total += count.getCount();
             }
         }
         if (unexpected > 0) {
-            System.out.println(String.format("\t%,12d\t%s", unexpected, "Unexpected Type & Full Site"));
+            System.out.println("\t%,12d\t%s".formatted(unexpected, "Unexpected Type & Full Site"));
             total += unexpected;
         }
         long rem = sr.getResults().getNumFound() - total;
         if (rem > 0) {
-            System.out.println(String.format("\t%,12d\t%s", rem, "Other Records"));
+            System.out.println("\t%,12d\t%s".formatted(rem, "Other Records"));
             total += rem;
         }
         return total;
