@@ -125,8 +125,7 @@ public class VersioningConsumer implements Consumer {
         // get latest item
         Item latestItem = latestVersion.getItem();
         if (latestItem == null) {
-            String msg = String.format(
-                "Illegal state: Obtained version history of item with uuid %s, handle %s, but the latest item is null",
+            String msg = "Illegal state: Obtained version history of item with uuid %s, handle %s, but the latest item is null".formatted(
                 item.getID(), item.getHandle()
             );
             log.error(msg);
