@@ -28,7 +28,6 @@ import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -74,9 +73,9 @@ import org.dspace.eperson.factory.EPersonServiceFactory;
 import org.dspace.eperson.service.GroupService;
 import org.dspace.services.ConfigurationService;
 import org.dspace.services.factory.DSpaceServicesFactory;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 /**
  * Basic integration testing for the Bulk Access conditions Feature{@link BulkAccessControl}.
@@ -101,7 +100,7 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
     private SearchService searchService = SearchUtils.getSearchService();
     private ConfigurationService configurationService = DSpaceServicesFactory.getInstance().getConfigurationService();
 
-    @Before
+    @BeforeEach
     @Override
     public void setUp() throws Exception {
 
@@ -111,7 +110,7 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
         tempFilePath = tempDir + "/bulk-access.json";
     }
 
-    @After
+    @AfterEach
     @Override
     public void destroy() throws Exception {
         PathUtils.deleteDirectory(tempDir);
@@ -134,14 +133,16 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String json = "{ \"item\": {\n" +
-            "      \"mode\": \"add\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }}\n";
+        String json = """
+            { "item": {
+                  "mode": "add",
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(json);
 
@@ -176,14 +177,16 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String json = "{ \"item\": {\n" +
-            "      \"mode\": \"add\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }}\n";
+        String json = """
+            { "item": {
+                  "mode": "add",
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(json);
 
@@ -217,14 +220,16 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String json = "{ \"item\": {\n" +
-            "      \"mode\": \"add\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }}\n";
+        String json = """
+            { "item": {
+                  "mode": "add",
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(json);
 
@@ -259,14 +264,16 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String json = "{ \"item\": {\n" +
-            "      \"mode\": \"add\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }}\n";
+        String json = """
+            { "item": {
+                  "mode": "add",
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(json);
 
@@ -297,14 +304,16 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String json = "{ \"item\": {\n" +
-            "      \"mode\": \"add\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }}\n";
+        String json = """
+            { "item": {
+                  "mode": "add",
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(json);
 
@@ -334,14 +343,16 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String json = "{ \"item\": {\n" +
-            "      \"mode\": \"add\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }}\n";
+        String json = """
+            { "item": {
+                  "mode": "add",
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(json);
 
@@ -378,14 +389,16 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String json = "{ \"item\": {\n" +
-            "      \"mode\": \"add\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }}\n";
+        String json = """
+            { "item": {
+                  "mode": "add",
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(json);
 
@@ -422,14 +435,16 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String json = "{ \"item\": {\n" +
-            "      \"mode\": \"add\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }}\n";
+        String json = """
+            { "item": {
+                  "mode": "add",
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(json);
 
@@ -470,14 +485,16 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String json = "{ \"item\": {\n" +
-            "      \"mode\": \"add\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }}\n";
+        String json = """
+            { "item": {
+                  "mode": "add",
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(json);
 
@@ -564,14 +581,16 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String json = "{ \"item\": {\n" +
-            "      \"mode\": \"wrong\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }}\n";
+        String json = """
+            { "item": {
+                  "mode": "wrong",
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(json);
 
@@ -605,13 +624,15 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String json = "{ \"item\": {\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }}\n";
+        String json = """
+            { "item": {
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(json);
 
@@ -645,14 +666,16 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String json = "{ \"bitstream\": {\n" +
-            "      \"mode\": \"wrong\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }}\n";
+        String json = """
+            { "bitstream": {
+                  "mode": "wrong",
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(json);
 
@@ -686,13 +709,15 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String json = "{ \"bitstream\": {\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }}\n";
+        String json = """
+            { "bitstream": {
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(json);
 
@@ -725,14 +750,16 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String json = "{ \"item\": {\n" +
-            "      \"mode\": \"add\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"wrongAccess\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }}\n";
+        String json = """
+            { "item": {
+                  "mode": "add",
+                  "accessConditions": [
+                      {
+                        "name": "wrongAccess"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(json);
 
@@ -766,15 +793,17 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String jsonOne = "{ \"item\": {\n" +
-            "      \"mode\": \"add\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"embargo\",\n" +
-            "            \"endDate\": \"2024-06-24T00:00:00Z\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }}\n";
+        String jsonOne = """
+            { "item": {
+                  "mode": "add",
+                  "accessConditions": [
+                      {
+                        "name": "embargo",
+                        "endDate": "2024-06-24T00:00:00Z"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(jsonOne);
 
@@ -808,15 +837,17 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String json = "{ \"item\": {\n" +
-            "      \"mode\": \"add\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"lease\",\n" +
-            "            \"startDate\": \"2024-06-24T00:00:00Z\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }}\n";
+        String json = """
+            { "item": {
+                  "mode": "add",
+                  "accessConditions": [
+                      {
+                        "name": "lease",
+                        "startDate": "2024-06-24T00:00:00Z"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(json);
 
@@ -1018,10 +1049,12 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String jsonOne = "{ \"item\": {\n" +
-            "      \"mode\": \"add\"\n" +
-            "   }\n" +
-            "}\n";
+        String jsonOne = """
+            { "item": {
+                  "mode": "add"
+               }
+            }
+            """;
 
         buildJsonFile(jsonOne);
 
@@ -1081,15 +1114,17 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String jsonOne = "{ \"item\": {\n" +
-            "      \"mode\": \"replace\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"embargo\",\n" +
-            "            \"startDate\": \"2024-06-24\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }}\n";
+        String jsonOne = """
+            { "item": {
+                  "mode": "replace",
+                  "accessConditions": [
+                      {
+                        "name": "embargo",
+                        "startDate": "2024-06-24"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(jsonOne);
 
@@ -1197,13 +1232,15 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String jsonOne = "{ \"item\": {\n" +
-            "      \"mode\": \"replace\"\n" +
-            "   },\n" +
-            " \"bitstream\": {\n" +
-            "      \"mode\": \"replace\"\n" +
-            "   }\n" +
-            "}\n";
+        String jsonOne = """
+            { "item": {
+                  "mode": "replace"
+               },
+             "bitstream": {
+                  "mode": "replace"
+               }
+            }
+            """;
 
         buildJsonFile(jsonOne);
 
@@ -1306,31 +1343,33 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String jsonOne = "{ \"item\": {\n" +
-            "      \"mode\": \"add\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          },\n" +
-            "          {\n" +
-            "            \"name\": \"embargo\",\n" +
-            "            \"startDate\": \"2024-06-24\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   },\n" +
-            " \"bitstream\": {\n" +
-            "      \"mode\": \"add\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          },\n" +
-            "          {\n" +
-            "            \"name\": \"lease\",\n" +
-            "            \"endDate\": \"2023-06-24\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }\n" +
-            "}\n";
+        String jsonOne = """
+            { "item": {
+                  "mode": "add",
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      },
+                      {
+                        "name": "embargo",
+                        "startDate": "2024-06-24"
+                      }
+                  ]
+               },
+             "bitstream": {
+                  "mode": "add",
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      },
+                      {
+                        "name": "lease",
+                        "endDate": "2023-06-24"
+                      }
+                  ]
+               }
+            }
+            """;
 
         buildJsonFile(jsonOne);
 
@@ -1413,31 +1452,33 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String jsonOne = "{ \"item\": {\n" +
-            "      \"mode\": \"replace\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          },\n" +
-            "          {\n" +
-            "            \"name\": \"embargo\",\n" +
-            "            \"startDate\": \"2024-06-24\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   },\n" +
-            " \"bitstream\": {\n" +
-            "      \"mode\": \"replace\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          },\n" +
-            "          {\n" +
-            "            \"name\": \"lease\",\n" +
-            "            \"endDate\": \"2023-06-24\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }\n" +
-            "}\n";
+        String jsonOne = """
+            { "item": {
+                  "mode": "replace",
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      },
+                      {
+                        "name": "embargo",
+                        "startDate": "2024-06-24"
+                      }
+                  ]
+               },
+             "bitstream": {
+                  "mode": "replace",
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      },
+                      {
+                        "name": "lease",
+                        "endDate": "2023-06-24"
+                      }
+                  ]
+               }
+            }
+            """;
 
         buildJsonFile(jsonOne);
 
@@ -1576,31 +1617,33 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String jsonOne = "{ \"item\": {\n" +
-            "      \"mode\": \"replace\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          },\n" +
-            "          {\n" +
-            "            \"name\": \"embargo\",\n" +
-            "            \"startDate\": \"2024-06-24\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   },\n" +
-            " \"bitstream\": {\n" +
-            "      \"mode\": \"replace\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"openaccess\"\n" +
-            "          },\n" +
-            "          {\n" +
-            "            \"name\": \"lease\",\n" +
-            "            \"endDate\": \"2023-06-24\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }\n" +
-            "}\n";
+        String jsonOne = """
+            { "item": {
+                  "mode": "replace",
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      },
+                      {
+                        "name": "embargo",
+                        "startDate": "2024-06-24"
+                      }
+                  ]
+               },
+             "bitstream": {
+                  "mode": "replace",
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      },
+                      {
+                        "name": "lease",
+                        "endDate": "2023-06-24"
+                      }
+                  ]
+               }
+            }
+            """;
 
         buildJsonFile(jsonOne);
 
@@ -1661,15 +1704,17 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String jsonOne = "{ \"item\": {\n" +
-            "      \"mode\": \"replace\",\n" +
-            "      \"accessConditions\": [\n" +
-            "          {\n" +
-            "            \"name\": \"embargo\",\n" +
-            "            \"startDate\": \"2024-06-24\"\n" +
-            "          }\n" +
-            "      ]\n" +
-            "   }}\n";
+        String jsonOne = """
+            { "item": {
+                  "mode": "replace",
+                  "accessConditions": [
+                      {
+                        "name": "embargo",
+                        "startDate": "2024-06-24"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(jsonOne);
 
@@ -1768,21 +1813,23 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
         context.restoreAuthSystemState();
 
-        String jsonOne = "{\n" +
-            "  \"bitstream\": {\n" +
-            "    \"constraints\": {\n" +
-            "      \"uuid\": []\n" +
-            "    },\n" +
-            "    \"mode\": \"replace\",\n" +
-            "    \"accessConditions\": [\n" +
-            "      {\n" +
-            "        \"name\": \"administrator\",\n" +
-            "        \"startDate\": null,\n" +
-            "        \"endDate\": null\n" +
-            "      }\n" +
-            "    ]\n" +
-            "  }\n" +
-            "}";
+        String jsonOne = """
+            {
+              "bitstream": {
+                "constraints": {
+                  "uuid": []
+                },
+                "mode": "replace",
+                "accessConditions": [
+                  {
+                    "name": "administrator",
+                    "startDate": null,
+                    "endDate": null
+                  }
+                ]
+              }
+            }\
+            """;
 
         buildJsonFile(jsonOne);
 
@@ -1938,7 +1985,7 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
     private void buildJsonFile(String json) throws IOException {
         File file = new File(tempDir + "/bulk-access.json");
-        Path path = Paths.get(file.getAbsolutePath());
+        Path path = Path.of(file.getAbsolutePath());
         Files.writeString(path, json, StandardCharsets.UTF_8);
     }
 }
